<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".HomeFragment"
    tools:layout_editor_absoluteX="23dp"
    tools:layout_editor_absoluteY="0dp">


    <View
        android:id="@+id/artistView"
        android:layout_width="366dp"
        android:layout_height="62dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="4dp"
        android:background="@drawable/frag_home_search_box"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <!--    <View-->
    <!--        android:id="@+id/border"-->
    <!--        android:layout_width="367dp"-->
    <!--        android:layout_height="427dp"-->
    <!--        android:layout_centerInParent="true"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:background="@drawable/artists_box_rounding"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/border2" />-->

    <ListView
        android:id="@+id/listViewArtists"
        android:layout_width="366dp"
        android:layout_height="428dp"
        android:layout_marginTop="10dp"
        android:divider="@color/background_color"
        android:dividerHeight="10dp"
        android:elevation="1dp"
        android:listSelector="@android:color/transparent"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistView"
        tools:visibility="visible" />


    <AutoCompleteTextView
        android:id="@+id/searchCard"
        style="@style/EditTextStyle"
        android:layout_width="251dp"
        android:layout_height="56dp"
        android:layout_marginBottom="6dp"
        android:autofillHints=""
        android:completionThreshold="1"
        android:dropDownWidth="349dp"
        android:dropDownHeight="280dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/click_select_add_artist"
        android:fontFamily="@font/alata"
        android:inputType="text"
        android:popupBackground="@drawable/frag_home_search_box_dropdown"
        android:textColor="#000000"
        android:textCursorDrawable="@drawable/frag_home_search_box_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/artistView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/artistView" />

    <Button
        android:id="@+id/addArtistButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/frag_home_search_box"
        android:backgroundTint="@color/frag_home_search_add_button"
        android:contentDescription="@string/addartist"
        android:scaleType="fitCenter"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/artistView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/artistView"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewArtists"
        app:layout_constraintVertical_bias="0.167"
        tools:layout_editor_absoluteX="0dp">
        <!--android:layout_marginBottom="86dp"-->

        <Button
            android:id="@+id/backupButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="183dp"
            android:layout_height="60dp"
            android:background="@drawable/frag_home_backup_button"
            android:backgroundTint="@color/frag_home_search_add_button"
            android:padding="0dp"
            android:text="@string/backup"
            android:fontFamily="@font/alata"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/restoreButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="183dp"
            android:layout_height="60dp"
            android:background="@drawable/frag_home_restore_button"
            android:backgroundTint="@color/secondary_colour_blue"
            android:padding="0dp"
            android:text="@string/restore"
            android:fontFamily="@font/alata"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="136dp"
        android:layout_height="120dp"
        android:contentDescription="@string/applogo"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/collectomon_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
