<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cardimage" />

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/cardNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:fontFamily="@font/alata"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/setDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/alata"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/cardDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/alata"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/addButton"
            android:layout_width="86dp"
            android:layout_height="50dp"
            android:text="@string/add"
            android:background="@drawable/frag_coll_sear_button"
            android:backgroundTint="@color/primary_colour_red"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/displayAddedText"
            android:layout_width="86dp"
            android:layout_height="50dp"
            android:background="@drawable/frag_search_dotted_border"
            android:text="@string/added"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:visibility="gone"/>


    </LinearLayout>

</LinearLayout>
