<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".CollectionFragment">

    <ImageButton
        android:id="@+id/deleteCardButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/circle_background"
        android:elevation="5dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914"
        app:srcCompat="@drawable/minun"
        android:contentDescription="@string/deletecard" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="392dp"
        android:layout_height="580dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText1" />

    <ListView
        android:id="@+id/listViewArtists"
        android:layout_width="157dp"
        android:layout_height="155dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="56dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerArtists"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_spinner_collection"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchEditText1"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_card"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toStartOf="@+id/searchEditText1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/searchicon"
        android:contentDescription="@string/cardimage" />

</androidx.constraintlayout.widget.ConstraintLayout>