<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".CollectionFragment">

    <View
        android:id="@+id/searchView"
        android:layout_width="366dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/frag_search_search_box"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/artistViewButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/frag_home_search_box"
        android:backgroundTint="@color/frag_home_search_add_button"
        android:contentDescription="@string/select_artist"
        android:text="@string/select_artist"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchView" />

    <View
        android:id="@+id/artistView"
        android:layout_width="178dp"
        android:layout_height="22dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="38dp"
        android:background="@drawable/frag_search_artist_list_shape"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="392dp"
        android:layout_height="580dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <EditText
        android:id="@+id/searchEditText1"
        style="@style/EditTextStyle"
        android:textSize="18sp"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="61dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_card"
        android:inputType="text"
        android:textCursorDrawable="@drawable/frag_home_search_box_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <ImageButton
        android:id="@+id/deleteCardButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/addcard"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997"
        app:srcCompat="@drawable/minun" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <ListView
        android:id="@+id/loadArtistList"
        android:layout_width="300dp"
        android:layout_height="586dp"
        android:layout_marginTop="144dp"
        android:divider="#00000000"
        android:dividerHeight="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/loadName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/artistView"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="@+id/artistView"
        app:layout_constraintTop_toTopOf="@+id/artistView" />




</androidx.constraintlayout.widget.ConstraintLayout>